<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Favorite Restaurants</string>
    <string name="action_settings">Settings</string>
    <string name="new_favresto">New Favorite Restaurant:</string>
    <string name="favorite">FAVORITE</string>
    <string name="commit">Commit</string>
    <string name="title_activity_edit_fav_resto">EditFavRestoActivity</string>
    <string name="search_name">SEARCH NAME:</string>
    <string name="search_city">SEARCH CITY:</string>
    <string name="fetch_details">Fetch details from Yelp</string>
    <string name="required">Required:</string>
    <string name="search_name_hint">Enter a restaurant...</string>
    <string name="search_city_hint">Enter a city...</string>
    <string name="details">Details:</string>
    <string name="restaurant_details_title">Restaurant Details:</string>
    <string name="phone">PHONE:</string>
    <string name="yelp_page">YELP PAGE:</string>
    <string name="address">ADDRESS:</string>
    <string name="update">Update</string>
    <string name="exit">Exit</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="enter_note">Enter note here...</string>
    <string name="edit_notes">Edit Notes</string>
    <string name="edit_notes_title">Edit Notes</string>

</resources>
