<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context="edu.uchicago.cs.dboshardy.favrestos.app.NotesActivity$PlaceholderFragment">

    <TextView
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:text="@string/hello_world"
        android:id="@+id/notes_header"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp" />
    <LinearLayout
        android:layout_marginBottom="12dp"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_weight="6"
        android:layout_height="0dp">
    <EditText
        android:hint="@string/enter_note"
        android:gravity="top"
        android:background="@color/white"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_height="0dp">
        <Button
            android:text="@string/cancel"
            android:id="@+id/cancel_note_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textColor="@color/white"
            android:layout_height="fill_parent"/>
        <Button
            android:id="@+id/save_note_button"
            android:layout_weight="2"
            android:textColor="@color/white"
            android:text="@string/save"
            android:layout_width="0dp"
            android:layout_height="fill_parent"/>
        </LinearLayout>

</LinearLayout>
