<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighter_grey"
    tools:context="edu.uchicago.cs.dboshardy.favrestos.app.EditFavRestoActivity.EditFavRestoFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_grey"
                android:text="@string/required"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:orientation="horizontal">

                <!--TODO: Maybe hard code the size of image for use with list view-->
                <ImageView
                    android:id="@+id/image_view"
                    android:layout_marginTop="12dp"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="12dp"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/search_name"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="6dp"
                        android:background="@color/dark_grey" />

                    <EditText
                        android:id="@+id/search_restaurant"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/search_name_hint"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:gravity="center_vertical"
                        android:text="@string/search_city"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="6dp"
                        android:background="@color/dark_grey" />

                    <EditText
                        android:id="@+id/search_city"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/search_city_hint"
                        android:textColor="@color/black" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/fetch_button"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_margin="6dp"
            android:background="@color/light_grey"
            android:text="@string/fetch_details"
            android:textColor="@color/black" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:background="@color/dark_grey" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_grey"
                android:text="@string/details"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_phone"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="6dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/phone"
                        android:textColor="@color/black" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@color/dark_grey" />

                    <TextView
                        android:id="@+id/text_address"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="6dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/address"
                        android:textColor="@color/black" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@color/dark_grey" />

                    <TextView
                        android:id="@+id/text_yelp_url"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="6dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/yelp_page"
                        android:textColor="@color/black" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@color/dark_grey" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="6dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/favorite"
                        android:textColor="@color/black" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@color/dark_grey" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <EditText
                        android:layout_width="fill_parent"
                        android:id="@+id/edit_phone"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:id="@+id/edit_address"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:id="@+id/edit_yelp_url"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/favorite_checked"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <View
                            android:id="@+id/favorite_color_view"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:background="@color/green" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="6dp"
            android:background="@color/dark_grey" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="40dp">
            <Button
                android:id="@+id/cancel_button"
                android:text="@string/cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="fill_parent" />
            <Button
                android:id="@+id/update_button"
                android:text="@string/update"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="fill_parent" />
            </LinearLayout>
    </LinearLayout>


    <!--TODO: Add layout-->

</RelativeLayout>
